--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="hero.css">
+    <link rel="stylesheet" type="text/css" href="/css/landing.css">
     <link rel="shortcut icon" type="image/png" href="/Images/safe_favicon.png"/>
 </head>
 <body>
