--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html>
 <head>
-    <title>SAFE Template</title>
+    <title>Proxy Croak Codes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="/css/landing.css">
-    <link rel="shortcut icon" type="image/png" href="/Images/safe_favicon.png"/>
+    <link rel="shortcut icon" href="/Images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/Images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="elmish-app" />
