--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Proxy Croak Codes</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -12,7 +13,7 @@
     <link rel="icon" href="/Images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div id="elmish-app" />
+    <div id="elmish-app"></div>
     <script src="./public/bundle.js"></script>
 </body>
 </html>
