--- a/src/Client/public/index.html
+++ b/src/Client/public/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div id="elmish-app"></div>
-    <script src="./public/vendors.js"></script>
-    <script src="./public/main.js"></script>
+    <script src="/js/vendors.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
